--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "vercel-dev": "vercel dev"
   },
   "dependencies": {
+    "@vercel/blob": "^2.0.0",
+    "@vercel/kv": "^1.0.1",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "uuid": "^9.0.0",
-    "bcryptjs": "^2.4.3",
-    "sharp": "^0.32.6"
+    "sharp": "^0.32.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "vercel": "^32.5.0"
