--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@vercel/blob": "^2.0.0",
-    "@vercel/kv": "^1.0.1",
+    "@vercel/redis": "^1.0.0",
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
